[tool.poetry]
name = "project1"
version = "0.1.0"
description = ""
authors = ["Shivan Poduel <shivanpoudel8@gmail.com>"]
readme = "README.md"
packages = [
    { include = "ROOT", from = "/opt/homebrew/lib/root" }
]


[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
